docs/apache-airflow-providers-fab/1.0.0/_sources/_api/airflow/providers/fab/auth_manager/api/auth/backend/kerberos_auth/index.rst.txt
:py:mod:`airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth`
===========================================================================

.. py:module:: airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.find_user



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.log
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.CLIENT_AUTH
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.init_app
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.requires_authentication


.. py:data:: log

   

.. py:data:: CLIENT_AUTH
   :type: tuple[str, str] | Any | None

   

.. py:function:: find_user(username=None, email=None)


.. py:data:: init_app

   

.. py:data:: requires_authentication

   

