docs/apache-airflow-providers-fab/1.5.3/_sources/_api/airflow/providers/fab/auth_manager/api/auth/backend/kerberos_auth/index.rst.txt
airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth
=================================================================

.. py:module:: airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth


Attributes
----------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.log
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.CLIENT_AUTH
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.T


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.KerberosService


Functions
---------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.init_app
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.find_user
   airflow.providers.fab.auth_manager.api.auth.backend.kerberos_auth.requires_authentication


Module Contents
---------------

.. py:data:: log

.. py:data:: CLIENT_AUTH
   :type:  tuple[str, str] | Any | None

.. py:class:: KerberosService

   Class to keep information about the Kerberos Service initialized.


   .. py:attribute:: service_name
      :value: None



.. py:function:: init_app(app)

   Initialize application with kerberos.


.. py:data:: T

.. py:function:: find_user(username=None, email=None)

.. py:function:: requires_authentication(function, find_user = find_user)

   Decorate functions that require authentication with Kerberos.


